# scrap-manager

./: Cargo.toml  README.md  Readme.md
src/: app.rs  main.rs
src/db/: mod.rs  queries.rs  schema.rs
src/domain/: inventory.rs  transaction.rs
src/ui/: dashboard.rs  dialogs.rs
src/util/: logging.rs  paths.rs
