[package]
name = "scrap-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
directories-next = "2.0.0"
gtk4 = "0.10.3"
log = "0.4.29"
rusqlite = { version = "0.38.0", features = ["bundled"] }
simplelog = "0.12.2"

[profile.dev]
debug = true
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
